asstes url updated

--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ h1 {
   height: 30px;
   text-indent: -9000px;
   overflow: hidden;
-  background: url(/assets/logo-odeko.png) no-repeat 0 0;
+  background: url(../assets/logo-odeko.png) no-repeat 0 0;
   background-size: contain;
   margin-top: 12px;
   margin-right: 8px;
@@ -86,7 +86,7 @@ a.showPic {
   height: 20px;
   overflow: hidden;
   text-indent: -9000px;
-  background: url(/assets/camera.svg) no-repeat;
+  background: url(../assets/camera.svg) no-repeat;
   background-size: contain;
   opacity: 0.8;
 }
@@ -106,7 +106,7 @@ p.hideNote {
   display: block;
   width: 80px;
   height: 80px;
-  background: url(/assets/logo-birch.png) no-repeat 0 0;
+  background: url(../assets/logo-birch.png) no-repeat 0 0;
   background-size: contain;
   margin-right: 14px;
 }
